--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "envalid": "^8.0.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^2.0.0",
     "mysql2": "^3.11.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -50,6 +51,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
