--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nest start --watch",
     "debug": "nest start --debug --watch",
     "build": "nest build",
-    "prod": "node dist/main",
+    "prod": "npx prisma generate && npx prisma migrate deploy && node dist/main",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typos": "typos"
